# pyspoke

./: .gitignore  Makefile  README.md  plan.md  rl.sh  setup.cfg
dev-bin/: spoke-bridge  spoke-call  spoke-proxy
python/spoke/: __init__.py  client.py  genid.py  routing.py  serial.py  server.py  simple.py  sync.py  wait.py
python/spoke/connection/: __init__.py  client.py  error.py  server.py
python/spoke/message/: client.py  serialize.py  server.py
python/spoke/pubsub/: __init__.py  client.py  msgpack.py  route.py  serialize.py  server.py
src/spoke/: __init__.py  cli.py  genid.py  simple.py  wait.py
src/spoke/conn/: __init__.py  abc.py  pack.py  socket.py
src/spoke/connection/: __init__.py  error.py
src/spoke/message/: __init__.py  client.py  server.py
src/spoke/pubsub/: __init__.py  client.py  pack.py  proxy.py  route.py  server.py
test/cases/basic_pubsub/: expected.txt  test.sh
test/cases/bounce/: test.sh
test/cases/bridge/: call.py  square.py  test.sh
test/cases/channel_tokens/: test.py
test/cases/conn_basic/: client.py  expected_client1.txt  expected_client2.txt  expected_server.txt  server.py  test.sh
test/cases/genid/: test.py
test/cases/msg_basic/: client.py  expected_client1.txt  expected_client2.txt  server.py  test.sh
test/cases/msg_former/: test.py
test/cases/pubsub_basic/: test.sh
test/cases/route_test/: test.py
test/cases/rpc_call/: expected.txt  square.py  square_call.py  test.sh
test/cases/rpc_provide/: expected.txt  square.py  test.sh
test/common/: square.py
test/pubsub_basic/: test.sh
tests/common/: square.py
(+101 files in other folders)
