[metadata]
name = pyspoke
version = 0.0.1
author = samflam
author_email = spoke@samflam.com
description = A publish/subscribe and rpc library in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/samflam/spoke
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    spoke-bridge = spoke.cli:bridge
    spoke-call = spoke.cli:call
    spoke-echo = spoke.cli:echo
    spoke-publish = spoke.cli:publish
    spoke-server = spoke.cli:server

[options.packages.find]
where = src
